# geonames-rs

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: client.rs  config.rs  error.rs  lib.rs  response.rs
tests/: geonames.rs
