[package]
name = "geonames-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_variant = "0.1.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
